@@ -1,3 +1,6 @@
+* Wed Sep 25 2019 Steven Pritchard <steven.pritchard@onyxpoint.com> - 5.3.0-0
+- Deep merge user_specifications by default
+
 * Fri Aug 02 2019 Robert Vincent <pillarsdotnet@gmail.com> - 5.2.1-0
 - Support puppetlabs/concat 6.x.
 
